--- a/app/src/main/res/layout/joke_fragment.xml
+++ b/app/src/main/res/layout/joke_fragment.xml
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginVertical="50dp"
-        android:text="Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!Olá mundo!"
         app:layout_constraintTop_toBottomOf="@id/img_joke" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -38,7 +37,7 @@
 
 
     <ProgressBar
-        android:id="@+id/home_progress_bar"
+        android:id="@+id/joke_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
