--- a/app/src/main/res/layout/joke_fragment.xml
+++ b/app/src/main/res/layout/joke_fragment.xml
@@ -10,7 +10,7 @@
         android:id="@+id/img_joke"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/home_outline"
+        android:src="@drawable/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
         android:layout_marginVertical="50dp"
+        android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@id/img_joke" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
